--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
+    "react-hook-form": "^6.14.1",
     "react-router-dom": "^5.2.0"
   }
 }
