--- a/package.json
+++ b/package.json
@@ -24,13 +24,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.0.0-beta1",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.11",
-    "react-hook-form": "^6.14.1",
-    "react-router-dom": "^5.2.0"
+    "mongoose": "^5.11.11"
   }
 }
