--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^5.0.0-beta1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.2",
     "react-router": "^5.2.0",
