--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-time-input": "0.0.19",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
